[gd_scene load_steps=12 format=2]

[ext_resource path="res://Player/User_Interface.gd" type="Script" id=1]
[ext_resource path="res://Sprites/powerup_10.png" type="Texture" id=2]
[ext_resource path="res://Other/Font_Extra_small.tres" type="DynamicFont" id=3]
[ext_resource path="res://Sprites/powerup_09.png" type="Texture" id=4]
[ext_resource path="res://Sprites/powerups.png" type="Texture" id=5]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.890196, 0.588235, 0, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0, 0.952941, 1, 1 )
border_blend = true
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
corner_detail = 10

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.211765, 0.211765, 0.211765, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0, 0.952941, 1, 1 )
border_blend = true
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
corner_detail = 10

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.984314, 0.0156863, 0.0156863, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0, 0.952941, 1, 1 )
border_blend = true
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
corner_detail = 10

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.203922, 0.203922, 0.203922, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0, 0.952941, 1, 1 )
border_blend = true
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
corner_detail = 10

[sub_resource type="Animation" id=5]
resource_name = "No_Rocket"
tracks/0/type = "value"
tracks/0/path = NodePath("Rocket:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1e-05, 1e-05 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "Yes_Rocket"
tracks/0/type = "value"
tracks/0/path = NodePath("Rocket:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0.2, 0.2 ) ]
}

[node name="User Interface" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="Fuel_Bar" type="ProgressBar" parent="."]
margin_left = 14.1114
margin_top = 180.0
margin_right = 68.1114
margin_bottom = 208.0
rect_rotation = -89.9999
custom_styles/fg = SubResource( 1 )
custom_styles/bg = SubResource( 2 )
step = 1.0
value = 50.0
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Health_Bar" type="ProgressBar" parent="."]
margin_left = -0.111362
margin_top = 180.0
margin_right = 152.889
margin_bottom = 194.0
rect_rotation = -89.9999
custom_styles/fg = SubResource( 3 )
custom_styles/bg = SubResource( 4 )
value = 50.0
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_left = 14.2757
margin_top = 29.52
margin_right = 76.2757
margin_bottom = 38.52
custom_fonts/font = ExtResource( 3 )
text = "Health"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="."]
margin_left = 43.2063
margin_top = 129.0
margin_right = 84.2063
margin_bottom = 138.0
custom_fonts/font = ExtResource( 3 )
text = "Fuel"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureButton" type="TextureButton" parent="."]
margin_left = 307.321
margin_top = 2.1984
margin_right = 318.321
margin_bottom = 13.1984
texture_normal = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureButton2" type="TextureButton" parent="."]
margin_left = 307.756
margin_top = 15.101
margin_right = 317.756
margin_bottom = 25.101
texture_normal = ExtResource( 4 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Rocket" type="Sprite" parent="."]
position = Vector2( 53.888, 167.125 )
scale = Vector2( 1e-05, 1e-05 )
texture = ExtResource( 5 )
hframes = 4
vframes = 4
frame = 4

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/No_Rocket = SubResource( 5 )
anims/Yes_Rocket = SubResource( 6 )

[connection signal="pressed" from="TextureButton" to="." method="_on_TextureButton_pressed"]
[connection signal="pressed" from="TextureButton2" to="." method="_on_TextureButton2_pressed"]
